# piano-gl

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  USAGE.md
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
assets/: README.md  demo.mid  piano.blend  scene.glb  scene.gltf
cmake/: embed_shaders.py
examples/keys_example/: CMakeLists.txt  main.cpp  midi_player.cpp  midi_player.h
include/keys/: renderer.hpp
keys/: CMakeLists.txt
shaders/: equirect_to_cube.frag  equirect_to_cube.vert  pbr.frag  pbr.vert  shadow_depth.vert  skybox.frag  skybox.vert
src/: gltf_loader.cpp  key_animation.cpp  keys.hpp  log.hpp  render_passes.cpp  renderer.cpp  renderer_internal.hpp  shader_utils.cpp  texture.cpp
